test-suite/tests/ui/states/undeclared_assign.rs
use stated::stated;

#[stated(states(A))]
pub struct Test<#[stated] S>;

#[stated]
impl<#[stated] S> Test<S> {
    #[stated(assign(B))]
    pub fn foo(self) {}
}

fn main() {}
